force-app/main/default/objects/RE_User_Agreement__mdt/RE_User_Agreement__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata stores community partner user agreement version and status</description>
    <label>RE  User Agreement</label>
    <pluralLabel>RE User Agreements</pluralLabel>
</CustomObject>