force-app/main/default/objects/RE_User_Agreement__mdt/fields/Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Name__c</fullName>
    <description>Used to store name of communities</description>
    <label>Community Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RE</fullName>
                <default>true</default>
                <label>RE</label>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>