force-app/main/default/objects/RE_User_Agreement__mdt/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Header of the user agreement text</description>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>