force-app/main/default/objects/RE_User_Agreement__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>User Language</description>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>English</fullName>
                
                    <default>true</default>
                
                    <label>English</label>
                
                </value>
            
                <value>
                
                    <fullName>Spanish</fullName>
                
                
                    <label>Spanish</label>
                
                </value>
            
                <value>
                
                    <fullName>es</fullName>
                
                
                    <label>es</label>
                
                </value>
            
                <value>
                
                    <fullName>en_US</fullName>
                
                
                    <label>en_US</label>
                
                </value>
            
                <value>
                
                    <fullName>es_US</fullName>
                
                
                    <label>es_US</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>