force-app/main/default/objects/RE_User_Agreement__mdt/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>Partner User agreement Text</description>
    <inlineHelpText>Partner User agreement Text</inlineHelpText>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>