force-app/main/default/objects/RE_User_Agreement__mdt/fields/userType__c.field-meta.xml
<CustomField>
    <fullName>userType__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RE Community Partner User Profile</fullName>
            </value>
            <value>
                <fullName>RE Citizen Profile</fullName>
            </value>
            <value>
                <fullName>RE Assister Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>