force-app/main/default/objects/RE_User_Agreement__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Tracks the version of the agreement</description>
    <inlineHelpText>Version of user consent agreement.</inlineHelpText>
    <label>Version</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>